--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "heroku-postbuild": "npm run build"
     },
     "engines": {
-        "node": "14.x"
+        "node": ">=18.18.0 <19.0.0"
     },
     "dependencies": {
         "axios": "^1.7.2",
